chapter1/app_v2/kompose_output/myapp-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: myapp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/myapp: "true"
  podSelector:
    matchLabels:
      io.kompose.network/myapp: "true"
